# rPPG-Toolbox

./: .gitignore  config.py  hpc_setup.sh  main.py  pyproject.toml  requirements.txt
configs/: NECKFLIX_CVP.yaml
notebooks/: visualising_outputs.ipynb
slurm_out/: 615283_PhysMamba-Neckflix.err  615283_PhysMamba-Neckflix.out  615286_DeepPhys-Neckflix.err  615286_DeepPhys-Neckflix.out  615288_EfficientPhys-Neckflix.err  615288_EfficientPhys-Neckflix.out  615289_iBVPNet-Neckflix.err  615289_iBVPNet-Neckflix.out  615290_PhysFormer-Neckflix.err  615290_PhysFormer-Neckflix.out  615291_PhysNet-Neckflix.err  615291_PhysNet-Neckflix.out  615727_Neckflix_ecg_defaults.out  615739_Neckflix_cvp_defaults.out  615742_Neckflix_abp_defaults.out  615833_Neckflix_abp_defaults.out  615834_Neckflix_ecg_defaults.out  615835_Neckflix_cvp_defaults.err  615835_Neckflix_cvp_defaults.out
slurm_scripts/: neckflix_DeepPhys.slurm  neckflix_EfficientPhys.slurm  neckflix_EfficientPhys_Standardized.slurm  neckflix_PhysFormer.slurm  neckflix_PhysFormer_Standardized.slurm  neckflix_PhysMamba.slurm  neckflix_PhysMamba_Standardized.slurm  neckflix_PhysNet.slurm  neckflix_PhysNet_Standardized.slurm  neckflix_RhythmFormer.slurm  neckflix_RhythmFormer_Standardized.slurm  neckflix_TSCAN.slurm  neckflix_abp_defaults.slurm  neckflix_cvp_defaults.slurm  neckflix_ecg_defaults.slurm  neckflix_iBVPNet.slurm  neckflix_iBVPNet_Standardized.slurm  preprocessing_script.slurm  train_PURE_test_UBFCrPPG.slurm  train_PURE_test_UBFCrPPG_DeepPhys.slurm  train_PURE_test_UBFCrPPG_EfficientPhys.slurm
(+119 files in other folders)
