[project]
name = "rppg-toolbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fsspec==2025.7.0",
    "h5py==3.14.0",
    "ipykernel==6.30.1",
    "ipywidgets==8.1.7",
    "mat73==0.65",
    "matplotlib==3.10.6",
    "neurokit2==0.2.12",
    "numpy==2.3.2",
    "opencv-python==4.11.0.86",
    "pandas==2.3.2",
    "protobuf==6.32.0",
    "pyyaml==6.0.2",
    "scikit-image==0.25.2",
    "scikit-learn==1.7.1",
    "scipy==1.16.1",
    "tensorboardx==2.6.4",
    "thop==0.1.1.post2209072238",
    "timm==1.0.19",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "tqdm==4.67.1",
    "yacs==0.1.8",
]

[tool.uv]
link-mode = "copy"
cache-dir = ".uv_cache"

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
  { index = "pytorch-cu124", marker = "sys_platform != 'darwin'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
  { index = "pytorch-cu124", marker = "sys_platform != 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.extra-build-dependencies]